Closed
Bug 1246089
Opened 10 years ago
Closed 9 years ago
[e10s] Alt+Click on <select>'s dropmarker doesn't open drop-down menu
Categories
(Core :: Layout: Form Controls, defect, P3)
Core
Layout: Form Controls
Tracking
()
RESOLVED
FIXED
mozilla51
People
(Reporter: arni2033, Assigned: enndeakin)
References
(
URL
)
Details
Attachments
(1 file)
|
8.21 KB,
patch
|
tnikkel
:
review+
|
Details | Diff | Splinter Review |
>>> My Info: Win7_64, Nightly 46, 32bit, ID 20160204030229
STR:
1. Open the following "data:" url or click URL in the form above
> data:text/html,<body><select><option>1<option>2
2. Hold Alt
3. Click on the <select>'s dropmarker several times
AR: No drop-down menu
ER: Drop-down menu should open, just like in non-e10s mode
Comment 1•10 years ago
|
||
I can only reproduce this bug on Linux. And as reported, it works on Linux in non-e10s.
Ubuntu 14.04.2, Nightly 47.0a1, 20160209030347 - Broken
Mac 10.11.2, Nightly 47.0a1, 20160209030347 - WFM
Windows 7, Nightly 47.0a1, 20160208030244 - WFM
Updated•10 years ago
|
tracking-e10s:
--- → +
Priority: -- → P3
Updated•10 years ago
|
Flags: needinfo?(jgriffiths)
Comment 2•10 years ago
|
||
I don't think this should block, the use case is very specific. We should track it for post-m8?
Flags: needinfo?(jgriffiths) → needinfo?(jmathies)
| Assignee | ||
Comment 4•9 years ago
|
||
Pressing the alt key alone closes any open menus. However, this doesn't normally happen for combobox menus on any platform so ignore menulist popups during this check.
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
| Assignee | ||
Updated•9 years ago
|
Attachment #8778346 -
Flags: review?(tnikkel)
Updated•9 years ago
|
Attachment #8778346 -
Flags: review?(tnikkel) → review+
| Assignee | ||
Comment 5•9 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/f976cbf4dea05f539ca4d767ab2b8679e3001e38
Bug 1246089, don't rollup a menulist popup when alt is pressed, r=tn
Comment 6•9 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox51:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in
before you can comment on or make changes to this bug.
Description
•