Bug 1246089, don't rollup a menulist popup when alt is pressed, r=tn