layout/xul/nsXULPopupManager.cpp
@@ -2605,10 +2605,12 @@ nsXULPopupManager::KeyDown(nsIDOMKeyEvent* aKeyEvent)
       if (!(ctrl || alt || shift || meta)) {
         // The access key just went down and no other
         // modifiers are already down.
-        if (mPopups)
+        nsMenuChainItem* item = GetTopVisibleMenu();
+        if (mPopups && item && !item->Frame()->IsMenuList()) {
           Rollup(0, false, nullptr, nullptr);
-        else if (mActiveMenuBar)
+        } else if (mActiveMenuBar) {
           mActiveMenuBar->MenuClosed();
+        }
 
         // Clear the item to avoid bugs as it may have been deleted during rollup.
         item = nullptr; 
